fix: page header background covering content

--- a/packages/cloud-cognitive/src/components/PageHeader/_page-header.scss
+++ b/packages/cloud-cognitive/src/components/PageHeader/_page-header.scss
@@ -37,16 +37,35 @@ $right-section-std-width: 100% - $left-section-std-width;
 $left-section-alt-width: 75%;
 $right-section-alt-width: 100% - $left-section-alt-width;
 
-@mixin appearingBackground() {
+@keyframes background-appear {
+  from {
+    background-color: var(--from-color);
+  }
+  to {
+    background-color: var(--to-color);
+  }
+}
+
+@mixin appearingBackground($from-color: $ui-background, $to-color: $ui-01) {
+  // stylelint-disable-next-line carbon/theme-token-use
+  --from-color: #{$from-color};
+  // stylelint-disable-next-line carbon/theme-token-use
+  --to-color: #{$to-color};
+
   position: absolute;
   top: 0;
   left: 0;
   display: block;
   width: 100%;
   height: 100%;
-  background-color: $ui-01;
+
+  // This transitions the background-color between from-color and to-color
+  // stylelint-disable-next-line carbon/motion-token-use
+  animation: background-appear 1
+    calc((var(--#{$block-class}--background-opacity)) * -1) linear paused
+    forwards;
+
   content: '';
-  opacity: var(--#{$block-class}--background-opacity);
 }
 
 @mixin page-header {
@@ -77,7 +96,7 @@ $right-section-alt-width: 100% - $left-section-alt-width;
       --#{$block-class}--navigation-buffer-top: $spacing-04;
     }
 
-    &.#{$block-class}--show-background::before {
+    &::before {
       @include appearingBackground();
 
       z-index: -1;
@@ -112,8 +131,9 @@ $right-section-alt-width: 100% - $left-section-alt-width;
     }
 
     .#{$block-class}__has-page-actions-without-action-bar {
-      min-width: $left-section-std-width;
-      max-width: $left-section-std-width;
+      // NOTE: the extra spacing accounts for carbon margins
+      min-width: calc(0.6 * (100% + 2 * #{$spacing-05}));
+      max-width: calc(0.6 * (100% + 2 * #{$spacing-05}));
     }
 
     .#{$block-class}__has-page-actions-without-action-bar
@@ -216,22 +236,24 @@ $right-section-alt-width: 100% - $left-section-alt-width;
       }
     }
 
-    .#{$block-class}__breadcrumb-row .#{$block-class}__breadcrumb-column {
+    .#{$block-class}__breadcrumb-row--has-action-bar
+      .#{$block-class}__breadcrumb-row
+      .#{$block-class}__breadcrumb-column {
       // back button displayed only
-      max-width: $right-section-alt-width;
-      flex: 0 1 $right-section-alt-width;
+      max-width: $left-section-alt-width;
+      flex: 0 1 $left-section-alt-width;
 
       @include carbon--breakpoint(md) {
         max-width: $left-section-std-width;
         flex: 0 1 $left-section-std-width;
       }
+    }
 
-      .#{$block-class}__has-page-actions-without-action-bar
-        .#{$block-class}__breadcrumb-row
-        .#{$block-class}__breadcrumb-column {
-        max-width: 100%;
-        flex: 0 1 100%;
-      }
+    .#{$block-class}__has-page-actions-without-action-bar.#{$block-class}__breadcrumb-row
+      .#{$block-class}__breadcrumb-column {
+      // the width of the breadcrumb column is adjusted elsewhere to compensate
+      max-width: 100%;
+      flex: 0 1 100%;
     }
 
     .#{$block-class}__breadcrumb-column--background,
@@ -239,10 +261,8 @@ $right-section-alt-width: 100% - $left-section-alt-width;
       position: relative;
     }
 
-    &.#{$block-class}--show-background
-      .#{$block-class}__breadcrumb-column--background::before,
-    &.#{$block-class}--show-background
-      .#{$block-class}__action-bar-column--background::before {
+    .#{$block-class}__breadcrumb-column--background::before,
+    .#{$block-class}__action-bar-column--background::before {
       @include appearingBackground();
     }
 
@@ -433,11 +453,16 @@ $right-section-alt-width: 100% - $left-section-alt-width;
     }
 
     .#{$block-class}__title-row .#{$block-class}__page-actions {
+      position: relative;
       opacity: 1;
       transition: all $duration--fast-02
         carbon--motion('entrance', 'productive');
       transition-property: opacity, visibility;
       visibility: visible;
+    }
+
+    .#{$block-class}__title-row .#{$block-class}__page-actions::before {
+      @include appearingBackground();
     }
 
     .#{$block-class}__title-row .#{$block-class}__page-actions--in-breadcrumb {
@@ -517,9 +542,15 @@ $right-section-alt-width: 100% - $left-section-alt-width;
       align-items: center;
       justify-content: flex-end;
       padding-top: $spacing-02;
+      // allow space for expand/collapse if we have a background
+      padding-right: $spacing-07;
       padding-bottom: $spacing-02;
       text-align: right;
       white-space: nowrap;
+
+      @include carbon--breakpoint(md) {
+        padding-right: $spacing-05;
+      }
     }
 
     .#{$block-class}__navigation-tags--tags-only {
@@ -550,15 +581,6 @@ $right-section-alt-width: 100% - $left-section-alt-width;
       .#{$carbon-prefix}--btn__icon {
       // transform: rotate(90deg);
       transform: scaleY(-1);
-    }
-
-    &.#{$block-class}--show-background .#{$block-class}__navigation-tags {
-      // allow space for expand/collapse if we have a background
-      padding-right: $spacing-07;
-
-      @include carbon--breakpoint(md) {
-        padding-right: $spacing-05;
-      }
     }
   }
 
